--- a/MouseJoystickWithOverlay/MouseJoystickWithOverlay.csproj
+++ b/MouseJoystickWithOverlay/MouseJoystickWithOverlay.csproj
@@ -1,30 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64</Platforms>
     <UseWindowsForms>True</UseWindowsForms>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="RawInputEventArgs.cs" />
-    <Compile Remove="RawInputHandling.cs" />
-    <Compile Remove="RawInputReceiverWindow.cs" />
-    <Compile Remove="VJoyInterface.cs" />
+    <Compile Remove="FocusChangeMonitor.cs" />
+    <Compile Remove="Hook.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="RawInputEventArgs.cs" />
-    <None Include="RawInputHandling.cs" />
-    <None Include="RawInputReceiverWindow.cs" />
-    <None Include="VJoyInterface.cs" />
+    <None Include="Temp\FocusChangeMonitor.cs" />
+    <None Include="Temp\Hook.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RawInput.Sharp" Version="0.1.3" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     <PackageReference Include="Vortice.DirectInput" Version="3.6.2" />
   </ItemGroup>
@@ -41,8 +37,8 @@
     </None>
   </ItemGroup>
 
-  <ItemGroup>
-    <!--<FrameworkReference Include="Microsoft.WindowsDesktop.App.WindowsForms" />-->
-  </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="rem copy /Y &quot;$(SolutionDir)x64\$(Configuration)\*.dll&quot; &quot;$(TargetDir)&quot;" />
+  </Target>
 
 </Project>
