Key combinations for enable/disable and lock/unlock joystick.

--- a/MouseJoystickWithOverlay/MouseJoystickWithOverlay.csproj
+++ b/MouseJoystickWithOverlay/MouseJoystickWithOverlay.csproj
@@ -32,6 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="icon1.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="vJoyInterface.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
